2009-11-07  Andy Buckley  <andy@insectnation.org>

	* Now that the ProjHandler isn't full of defunct pointers (which
	tend to coincidentally point to *new* Projection pointers rather
	than undefined memory, hence it wasn't noticed until recently!),
	use of a duplicate projection name is now banned with a helpful
	message at runtime.

	* (Huge) overhaul of ProjectionHandler system to use shared_ptr:
	projections are now deleted much more efficiently, naturally
	cleaning themselves out of the central repository as they go out
	of scope.

2009-11-06  Andy Buckley  <andy@insectnation.org>

	* Adding Cmp<double> specialisation, using fuzzyEquals().

2009-11-05  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Fixing histogram division code.

2009-11-04  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* New analysis STAR_2006_S6500200 (pion and proton pT spectra
	in pp collisions at 200 GeV). It is still unclear if they used
	a cut in rapidity or pseudorapidity, thus the analysis is declared
	"UNDER DEVELOPMENT" and "DO NOT USE".
	* Fixing compare() in NeutralFinalState and MergedFinalState

2009-11-04  Andy Buckley  <andy@insectnation.org>

	* Adding consistence checking on beam ID and sqrt(s) vs. those
	from first event.

2009-11-03  Andy Buckley  <andy@insectnation.org>

	* Adding more assertion checks to linear algebra testing.

2009-11-02  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Fixing normalisation issue with stacked histograms in make-plots.

2009-10-30  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* CDF_2009_S8233977: Updating data and axes labels to match
	final paper. Normalise to cross-section instead of data.

2009-10-23  Andy Buckley  <andy@insectnation.org>

	* Fixing Cheese-3 plot in CDF 2004... at last!

2009-10-23  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Fix muon veto in CDF_1994_S2952106, CDF_2005_S6217184,
	CDF_2008_S7782535, and D0_2004_S5992206

2009-10-19  Andy Buckley  <andy@insectnation.org>

	* Adding analysis info files for MC SUSY and PHOTONJETUE analyses.
