@@ -6,9 +6,11 @@
 namespace Rivet {
 
 
+  // NB. Allow proj registration in constructor by default -- explicitly disable for Analysis 
   ProjectionApplier::ProjectionApplier()
-    : _projhandler(ProjectionHandler::create())
-  { }
+    : _allowProjReg(true),
+      _projhandler(ProjectionHandler::create())
+  {  }
 
 
   ProjectionApplier::~ProjectionApplier() {
@@ -30,6 +32,11 @@ namespace Rivet {
 
   const Projection& ProjectionApplier::_addProjection(const Projection& proj, 
                                                       const std::string& name) {
+    if (!_allowProjReg) {
+      getLog() << Log::ERROR << "Trying to register projection '" 
+               << proj.name() << "' before init phase in '" << this->name() << "'." << endl;
+      exit(2);
+    }
     const Projection& reg = getProjHandler().registerProjection(*this, proj, name);
     return reg;
   }
